--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,18 +3,6 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous"
-        />
-        <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          crossorigin="anonymous"
-        />         -->
-
 
         <title>{% block title %} Base {% endblock %}</title>
     </head>
@@ -22,5 +10,18 @@
         {% block content %} 
         <p>base content</p>
         {% endblock %}
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for message in messages %}
+            
+            <div>
+              {{ message }}
+            </div>
+            
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+
     </body>
 </html>
