--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1 class="text-center">Home Page</h1>
 
-<form method="POST">
+<form method="POST" action="{{ url_for('views.generate_plan') }}">
     <!-- DAYS AVAILABLE -->
     <div class="mb-3">
         <label for="days_available" class="form-label">How many days per week?</label>
@@ -18,9 +18,9 @@
     <div class="mb-3">
         <label for="session_length" class="form-label">Session Length?</label>
         <select name="session_length" id="session_length" class="form-select">
-            <option value="short">45-60 mins</option>
-            <option value="medium">60-90 mins</option>
-            <option value="long">90-120 mins</option>
+            <option value="Short">45-60 mins</option>
+            <option value="Medium">60-90 mins</option>
+            <option value="Long">90-120 mins</option>
         </select>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="mb-3">
         <label for="goal" class="form-label">Primary Goal?</label>
         <select name="goal" id="goal" class="form-select">
-            <option value="hypertrophy">Hypertrophy</option>
-            <option value="strength">Strength</option>
+            <option value="Hypertrophy">Hypertrophy</option>
+            <option value="Strength">Strength</option>
         </select>
     </div>
 
@@ -72,6 +72,7 @@
     </div>
 </form>
 
+<!-- update slider display -->
 <script>
     function updateValue(val) {
         document.getElementById("rangeValue").textContent = val;
