--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}sign up{% endblock %}
+{% block title %}Sign Up{% endblock %}
 {% block content %}
 <form method="POST">
     <h1>sign up page</h1>
