find suitable splits logic

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -15,23 +15,23 @@
     </div>
 
     <!-- SESSION LENGTH -->
-    <div class="mb-3">
-        <label for="session_length" class="form-label">Session Length?</label>
-        <select name="session_length" id="session_length" class="form-select">
-            <option value="Short">45-60 mins</option>
+    <!-- <div class="mb-3">
+        <label for="approach" class="form-label">Session Length?</label>
+        <select name="approach" id="approach" class="form-select">
+            <option value="Short">Low volume / High intensity</option>
             <option value="Medium" selected>60-90 mins</option>
             <option value="Long">90-120 mins</option>
         </select>
-    </div>
+    </div> -->
 
     <!-- PRIMARY GOAL -->
-    <div class="mb-3">
+    <!-- <div class="mb-3">
         <label for="goal" class="form-label">Primary Goal?</label>
         <select name="goal" id="goal" class="form-select">
             <option value="Hypertrophy">Hypertrophy</option>
             <option value="Strength">Strength</option>
         </select>
-    </div>
+    </div> -->
 
     <!-- SEX -->
     <!-- <div class="mb-3">
@@ -47,22 +47,22 @@
     <!-- EQUIPMENT AVAILABLE -->
     <div class="mb-3">
         <label class="form-label">Equipment Available?</label><br>
-        <input type="checkbox" id="barbell" name="equipment" value="Barbell">
+        <input type="checkbox" id="barbell" name="equipment" value="Barbell" checked>
         <label for="barbell">Barbell</label><br>
 
-        <input type="checkbox" id="dumbbells" name="equipment" value="Dumbbells">
+        <input type="checkbox" id="dumbbells" name="equipment" value="Dumbbells" checked>
         <label for="dumbbells">Dumbbells</label><br>
 
-        <input type="checkbox" id="bodyweight" name="equipment" value="Bodyweight">
+        <input type="checkbox" id="bodyweight" name="equipment" value="Bodyweight" checked>
         <label for="bodyweight">Bodyweight</label><br>
 
-        <input type="checkbox" id="calisthenic" name="equipment" value="Calisthenic Equipment">
+        <input type="checkbox" id="calisthenic" name="equipment" value="Calisthenic Equipment" checked>
         <label for="calisthenic">Calisthenic Equipment</label><br>
 
-        <input type="checkbox" id="cable_machines" name="equipment" value="Cable Machines">
+        <input type="checkbox" id="cable_machines" name="equipment" value="Cable Machines" checked>
         <label for="cable_machines">Cable Machines</label><br>
 
-        <input type="checkbox" id="gym_machines" name="equipment" value="Gym Machines">
+        <input type="checkbox" id="gym_machines" name="equipment" value="Gym Machines" checked>
         <label for="gym_machines">Gym Machines</label>
     </div>
 
