--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -50,20 +50,20 @@
         <input type="checkbox" id="barbell" name="equipment" value="Barbell" checked>
         <label for="barbell">Barbell</label><br>
 
-        <input type="checkbox" id="dumbbells" name="equipment" value="Dumbbells" checked>
+        <input type="checkbox" id="dumbbells" name="equipment" value="Dumbbell" checked>
         <label for="dumbbells">Dumbbells</label><br>
 
         <input type="checkbox" id="bodyweight" name="equipment" value="Bodyweight" checked>
         <label for="bodyweight">Bodyweight</label><br>
 
-        <input type="checkbox" id="calisthenic" name="equipment" value="Calisthenic Equipment" checked>
+        <!-- <input type="checkbox" id="calisthenic" name="equipment" value="Calisthenic Equipment" checked>
         <label for="calisthenic">Calisthenic Equipment</label><br>
+ -->
+        <input type="checkbox" id="cable_machines" name="equipment" value="Cable" checked>
+        <label for="cable_machines">Cables</label><br>
 
-        <input type="checkbox" id="cable_machines" name="equipment" value="Cable Machines" checked>
-        <label for="cable_machines">Cable Machines</label><br>
-
-        <input type="checkbox" id="gym_machines" name="equipment" value="Gym Machines" checked>
-        <label for="gym_machines">Gym Machines</label>
+        <input type="checkbox" id="gym_machines" name="equipment" value="Machine" checked>
+        <label for="gym_machines">Machines</label>
     </div>
 
     <!-- GENERATE PLAN BUTTON -->
