--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -24,12 +24,12 @@
         </select>
     </div> -->
 
-    <!-- PRIMARY GOAL -->
+    <!-- APPROACH -->
     <!-- <div class="mb-3">
-        <label for="goal" class="form-label">Primary Goal?</label>
+        <label for="goal" class="form-label">How do you want to structure your workout?</label>
         <select name="goal" id="goal" class="form-select">
-            <option value="Hypertrophy">Hypertrophy</option>
-            <option value="Strength">Strength</option>
+            <option value="Hypertrophy">Low Volume + High Intensity</option>
+            <option value="Strength">Moderate Volume + Moderate Intensity</option>
         </select>
     </div> -->
 
