pass workouts logic to display page

--- a/website/templates/display_plans.html
+++ b/website/templates/display_plans.html
@@ -3,4 +3,9 @@
 {% block title %}Generated Plan{% endblock %}
 {% block content %}
 <h1>Show Plan Here</h1>
+
+{% for plan in plans %}
+    <h2>{{ plan.split_name }}</h2>
+{% endfor %}
+
 {% endblock %}
