--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous"
-        />
-        <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          crossorigin="anonymous"
-        />
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>{% block title %} Base {% endblock %}</title>
-    </head>
-    <body>
-        {% block content %} 
-        <p>base content</p>
-        {% endblock %}
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet">
 
-        {% with messages = get_flashed_messages(with_categories=true) %}
+    <link 
+        rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+      <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+      
+    <title>{% block title %} Base {% endblock %}</title>
+  </head>
+  <body>
+      {% block content %} 
+      <p>base content</p>
+      {% endblock %}
+
+      {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
-            {% for message in messages %}
-            
-            <div>
-              {{ message }}
-            </div>
-            
-            {% endfor %}
+              {% for message in messages %}
+                  <div>{{ message }}</div>
+              {% endfor %}
           {% endif %}
-        {% endwith %}
+      {% endwith %}
 
+      <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+    </script>
+    
     </body>
 </html>
+
