additional exercises to db

--- a/website/templates/display_plans.html
+++ b/website/templates/display_plans.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="text-center mb-4">Generated Workout Plans</h1>
+    <h1 class="text-center mb-4">Workout Plan(s)</h1>
 
     {% if plans %}
     <div id="workoutCarousel" class="carousel slide" data-bs-ride="carousel">
