--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -30,10 +30,10 @@
         <div class="mb-4">
             <label class="form-label">Sex</label>
             <div>
-                <input type="radio" id="masculine" name="sex" value="Masculine" required checked>
-                <label for="masculine">Masculine</label>
-                <input type="radio" id="feminine" name="sex" value="Feminine">
-                <label for="feminine">Feminine</label>
+                <input type="radio" id="Man" name="sex" value="Man" required checked>
+                <label for="Man">Man</label>
+                <input type="radio" id="Woman" name="sex" value="Woman">
+                <label for="Woman">Woman</label>
             </div>
         </div>
 
@@ -61,6 +61,18 @@
                 <label for="gym_machines" class="form-check-label">Machines</label>
             </div>
         </div>
+
+        <!-- OPTIONS -->
+        <div class="mb-4">
+            <label class="form-label">In the case that more than 1 workout plan is found</label>
+            <div>
+                <input type="radio" id="No" name="see_plans" value="No"  required checked>
+                <label for="No">Choose the best workout for me</label>
+                <input type="radio" id="Yes" name="see_plans" value="Yes">
+                <label for="Yes">Show all possible options</label>
+            </div>
+        </div>
+        
 
         <!-- GENERATE PLAN BUTTON --> 
         <div class="text-center">
