--- a/website/templates/generated_plans.html
+++ b/website/templates/generated_plans.html
@@ -32,7 +32,9 @@
                     <div class="card-footer text-center">
                         <!-- Save Form -->
                         <form method="POST" action="{{ url_for('views.save_plan') }}">
-                            <input type="hidden" name="plan_data" value='"{{ plan | tojson | safe }}"'>
+                            <input type="hidden" name="split_name" value="{{ plan.split_name }}">
+                            <!-- Using JavaScript to set the plan_data input value -->
+                            <input type="hidden" name="plan_data" id="plan_data_{{ loop.index }}">
                             <button type="submit" class="btn btn-success">Save</button>
                         </form>
                     </div>
@@ -51,10 +53,16 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-        {% else %}
-        <p class="text-center">No workout plans available. Please generate a plan first.</p>
+    {% else %}
+    <p class="text-center">No workout plans available. Please generate a plan first.</p>
     {% endif %}
 </div>
+
+<!-- Adding a script to fill the hidden input with valid JSON data -->
+<script>
+    {% for plan in plans %}
+        document.getElementById('plan_data_{{ loop.index }}').value = JSON.stringify({{ plan | tojson }});
+    {% endfor %}
+</script>
+
 {% endblock %}
-
-
