added exerciseType to exercise model in db

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -19,15 +19,16 @@
 
         <!-- APPROACH -->
         <div class="mb-4">
-            <label for="goal" class="form-label">How do you want to structure your workout?</label>
-            <select name="goal" id="goal" class="form-select form-select-lg">
-                <option value="Hypertrophy">Low Volume + High Intensity</option>
-                <option value="Strength">Moderate Volume + Moderate Intensity</option>
+            <label for="approach" class="form-label">What best describes your approach?</label>
+            <select name="approach" id="approach" class="form-select form-select-lg">
+                <option value="low_volume">Lift heavier weight for lower volumes</option>
+                <option value="moderate_volume">Lift moderately heavy weight for moderate volume</option>
+                <option value="high_volume">Lift lighter weight for higher volume</option>
             </select>
         </div>
 
         <!-- SEX -->
-        <div class="mb-4">
+        <!-- <div class="mb-4">
             <label class="form-label">Sex</label>
             <div>
                 <input type="radio" id="Man" name="sex" value="Man" required checked>
@@ -35,7 +36,7 @@
                 <input type="radio" id="Woman" name="sex" value="Woman">
                 <label for="Woman">Woman</label>
             </div>
-        </div>
+        </div> -->
 
         <!-- EQUIPMENT AVAILABLE -->
         <div class="mb-4">
