approach and volume

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -19,11 +19,11 @@
 
         <!-- APPROACH -->
         <div class="mb-4">
-            <label for="approach" class="form-label">What best describes your approach?</label>
+            <label for="approach" class="form-label">What best describes your desired approach?</label>
             <select name="approach" id="approach" class="form-select form-select-lg">
-                <option value="low_volume">Lift heavier weight for lower volumes</option>
-                <option value="moderate_volume">Lift moderately heavy weight for moderate volume</option>
-                <option value="high_volume">Lift lighter weight for higher volume</option>
+                <option value="low_volume">Heavy weight, low volume, training very close to or even past failure</option>
+                <option value="moderate_volume" selected>Moderate weight, moderate volume, training close to failure</option>
+                <option value="high_volume">Lighter weight, higher volume, training somewhat close to failure</option>
             </select>
         </div>
 
